// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fold-render-props basic children 1`] = `
<pre>
  {
  "name": "⒞&lt;big&gt;⒝⒜CHILDREN⒜⒝&lt;/big&gt;⒞⒞&lt;big&gt;⒝⒜CHILDREN⒜⒝&lt;/big&gt;⒞⒞&lt;big&gt;⒝⒜CHILDREN⒜⒝&lt;/big&gt;⒞"
}
</pre>
`;

exports[`fold-render-props basic render 1`] = `
<pre>
  {
  "name": "⒞&lt;big&gt;⒝⒜RENDER⒜⒝&lt;/big&gt;⒞⒞&lt;big&gt;⒝⒜RENDER⒜⒝&lt;/big&gt;⒞⒞&lt;big&gt;⒝⒜RENDER⒜⒝&lt;/big&gt;⒞"
}
</pre>
`;

exports[`fold-render-props basic testRenderProp 1`] = `
<pre>
  {
  "name": "⒞&lt;big&gt;⒝⒜TESTRENDERPROP⒜⒝&lt;/big&gt;⒞⒞&lt;big&gt;⒝⒜TESTRENDERPROP⒜⒝&lt;/big&gt;⒞⒞&lt;big&gt;⒝⒜TESTRENDERPROP⒜⒝&lt;/big&gt;⒞"
}
</pre>
`;
